--- a/website/src/app/experience/experience.module.css
+++ b/website/src/app/experience/experience.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   background-color: var(--background);
   padding-top: 5vh;
