--- a/website/src/app/home/intro.module.css
+++ b/website/src/app/home/intro.module.css
@@ -179,7 +179,7 @@
 
 }
 
-@media (min-width: 480px) and (max-width: 767px) {
+@media (min-width: 601px) and (max-width: 767px) {
     /* medium mobile styles */
     .desktop {
         display: none;
@@ -270,6 +270,97 @@
 
 }
 
+@media (min-width: 480px) and (max-width: 600px) {
+    /* medium mobile styles */
+    .desktop {
+        display: none;
+    }
+
+    .mobile {
+        display: none;
+    }
+    .mobilemed {
+        display: block;
+    }
+
+    .tablet {
+        display: none;
+    }
+
+    .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-top: 15vh;
+        padding-bottom: 20vh;
+        padding-left: 5vw;
+        padding-right: 5vw;
+        background-color: var(--background);
+        overflow: hidden;
+    }
+    
+    .title {
+        font-size: 2.9rem;
+        font-weight: 500;
+        margin-bottom: 1vh;
+        display: flex;
+        align-items: center;
+        gap: 0.25rem;
+    }
+    
+    .description {
+        display: flex;
+        flex-direction: column;
+        gap: 2.5vh;
+        /* gap: 1vh; */
+        margin-bottom: 6vh;
+        font-size: 0.93rem;
+        min-width: 100%;
+    }
+    
+    .connect {
+        color: var(--foreground);
+        opacity: 0.8;
+        font-size: 0.9rem;
+        margin-bottom: 1vh;
+    }
+
+    .connect2 {
+        color: var(--foreground);
+        opacity: 0.8;
+        font-size: 0.9rem;
+        margin-bottom: 2vh;
+    }
+    
+    .decrypted {
+        display: inline-block;
+        overflow-wrap: break-word;
+        word-break: break-word;
+    }
+    
+    .socialLinks {
+        display: flex;
+        gap: 2vw;
+        justify-content: flex-start;
+        align-items: center;
+        padding-bottom: 10vh;
+    }
+    
+    .socialLink {
+        color: var(--foreground);
+        opacity: 0.8;
+        transition: opacity 0.2s ease, transform 0.2s ease;
+        font-size: 1.5rem;
+    }
+    
+    .socialLink:hover {
+        opacity: 1;
+        transform: translateY(-2px);
+    }
+
+}
+
 @media (max-width: 479px) {
     .desktop {
         display: none;
@@ -296,7 +387,7 @@
     }
     
     .title {
-        font-size: 2.7rem;
+        font-size: 2.5rem;
         font-weight: 500;
         margin-bottom: 2vh;
         display: flex;
@@ -316,14 +407,14 @@
     .connect {
         color: var(--foreground);
         opacity: 0.8;
-        font-size: 0.rem;
+        font-size: 0.8rem;
         margin-bottom: 1vh;
     }
 
     .connect2 {
         color: var(--foreground);
         opacity: 0.8;
-        font-size: 0.9rem;
+        font-size: 0.8rem;
         margin-bottom: 2vh;
     }
     
