--- a/website/src/app/page.module.css
+++ b/website/src/app/page.module.css
@@ -18,35 +18,55 @@
   padding-top: 8vh;
 }
 
-.alignLeft {
-  display: flex;
-  flex-direction: column;
+.leftAligned {
   align-items: flex-start;
-  width: 100%;
-  padding-left: 5vw;
+  padding-left: 10vw;
   padding-right: 5vw;
 }
 
-.alignLeft .page {
-  align-items: flex-start;
-  padding-left: 0;
-  padding-right: 0;
+@media (min-width: 1121px) and (max-width: 1799px) {
+  .leftAligned {
+    padding-left: 18vw;
+    padding-right: 5vw;
+  }
 }
 
-@media (min-width: 1024px) {
-  .alignLeft .page {
-    margin-left: 13vw; /* More on large screens */
+@media (min-width: 1024px) and (max-width: 1120px) {
+  .leftAligned {
+    padding-left: 10vw;
+    padding-right: 5vw;
   }
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
-  .alignLeft .page {
-    margin-left: 10vw; /* More on large screens */
+  .leftAligned {
+    padding-left: 5vw;
+    padding-right: 5vw;
   }
 }
 
+@media (min-width: 480px) and (max-width: 767px) {
+  .leftAligned {
+    padding-left: 3vw;
+    padding-right: 3vw;
+  }
+}
+
+@media (max-width: 479px) {
+  .leftAligned {
+    padding-left: 1vw;
+    padding-right: 1vw;
+  }
+
+  /* .page {
+    padding-top: 10vh;
+  } */
+}
+
+
 @media (min-width: 1800px) {
-  .alignLeft .page {
-    margin-left: 20vw; /* Even more on very large screens */
+  .leftAligned {
+    padding-left: 22vw;
+    padding-right: 5vw;
   }
 }
