--- a/website/src/app/projects/projects.module.css
+++ b/website/src/app/projects/projects.module.css
@@ -15,6 +15,10 @@
   display: block;
 }
 
+.green {
+  color: #4CAF50;
+}
+
 /* Desktop */
 @media (min-width: 1024px) {
   .desktop {
@@ -131,6 +135,7 @@
 
     background-color: var(--background);
     box-sizing: border-box;
+    padding: 0 5vw;
     
   }
   
@@ -237,8 +242,7 @@
     background-color: var(--background);
     box-sizing: border-box;
 
-    padding-right: 5vw;
-    
+    padding: 0 5vw;
   }
   
   .terminal-item {
@@ -247,7 +251,7 @@
   }
   
   .title {
-      font-size: 0.95rem;
+      font-size: 1rem;
       font-weight: 500;
       margin-bottom: 0.5rem;
       display: flex;
@@ -265,12 +269,12 @@
       gap: 0.4rem;
       /* margin-bottom: 3rem; */
       margin-top: 1rem;
-      font-size: 0.9rem;
+      font-size: 1rem;
   }
   
   
   .title2 {
-    font-size: 0.95rem;
+    font-size: 1rem;
     font-weight: 500;
     margin-bottom: 1rem;
     margin-top: 1rem;
@@ -288,7 +292,7 @@
     font-family: var(--font-lucida);
     background-color: transparent;
     border: 0cap;
-    font-size: 0.9rem;
+    font-size: 1rem;
     font-weight: 400;
     text-transform: lowercase;
     width: 22ch;
@@ -341,10 +345,104 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
+
     background-color: var(--background);
-    padding: 0 5vw;
-    padding-bottom: 30vh;
     box-sizing: border-box;
+
+    padding: 0 5vw;
+    /* padding-top: 5vh; */
+    padding-bottom: 20vh;
+  }
+  
+  .terminal-item {
+    flex-direction: row;
+ 
+  }
+  
+  .title {
+      font-size: 0.9rem;
+      font-weight: 500;
+      margin-bottom: 0.5rem;
+      display: flex;
+      align-items: center;
+      gap: 0.25rem;
+  }
+  
+  .content {
+      width: 100%;
+  }
+  
+  .description {
+      display: flex;
+      flex-direction: column;
+      gap: 0.4rem;
+      /* margin-bottom: 3rem; */
+      margin-top: 1rem;
+      font-size: 0.9rem;
+  }
+  
+  
+  .title2 {
+    font-size: 0.9rem;
+    font-weight: 500;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 0.25rem;
+  }
+  
+  .content {
+    width: 100%;
+  }
+
+  .button {
+    color: var(--foreground);
+    font-family: var(--font-lucida);
+    background-color: transparent;
+    border: 0cap;
+    font-size: 0.9rem;
+    font-weight: 400;
+    text-transform: lowercase;
+    width: 22ch;
+    text-align: left;
+  }
+
+  
+  .button:hover {
+    text-decoration: underline;
+    text-underline-offset: 2px;
+  }
+  
+  .terminalItem {
+    flex-direction: row;
+  }
+
+  .row {
+    flex-direction: row;
+    width: 100%;
+    box-sizing: border-box;
+    white-space: nowrap;
+    display: flex;
+    flex-direction: row;
+    gap: 3ch;
+  }
+
+  .row2 {
+    flex-direction: row;
+    width: 100%;
+    box-sizing: border-box;
+    white-space: nowrap;
+    display: flex;
+    flex-direction: row;
+    padding-top: 1ch;
+    padding-bottom: 1ch;
+    gap: 3ch;
+  }
+
+  .height {
+    max-width: 85vw;
+    width: 100%;
   }
 }
